--- a/v2740_psd.yaml
+++ b/v2740_psd.yaml
@@ -1,127 +1,126 @@
-channel_setting: &ch_default
-  trigger:
-    wave_trigger_source: disabled # "Disabled", "Ch64Trigger", "ChSelfTrigger", "SwTrg", "ADCOverSaturation", "ADCUnderSaturation", "ExternalInhibit", "TRGIN", "GlobalTriggerSource", "LVDS", "ITLA", "ITLB"
-    event_trigger_source: chselftrigger # "Disabled", "Ch64Trigger", "ChSelfTrigger", "SwTrg", "ADCOverSaturation", "ADCUnderSaturation", "ExternalInhibit", "TRGIN", "GlobalTriggerSource", "LVDS", "ITLA", "ITLB"
-    channels_trigger_mask: 0x0FF # 0x0000 ~ 0xffff
-    wave_saving: always # "Always", "OnRequest"
-    veto_source: disabled # "Disabled", "BoardVeto", "ADCOverSaturation", "ADCUnderSaturation"
-    veto_width: 0 # [ns]
-  waveform:
-    record_length: 20000 # [ns]
-    downsampling_factor: 1 # 1, 2, 4, 8
-    analog_probe: [adcinput, cfdfilter] # "ADCInput", "ADCInputBaseline", "CFDFilter"
-    digital_probe:
-      [trigger, longgate, shortgate, chargeready] #"Trigger", "CFDFilterArmed", "ReTriggerGuard", "ADCInputBaselineFreeze",
-      # "ADCinputOverthreshold", "ChargeReady", "LongGate" "PileUpTrigger", "ShortGate",
-      # "ChargeOverRange", "ADCSaturation", "ADCInputNegativeOverThreshold"
-    pre_trigger: 496 # [ns]
-    wave_data_source:
-      adc_data #"ADC_DATA", "ADC_TEST_TOGGLE", "ADC_TEST_RAMP",
-      #"ADC_TEST_SIN", "ADC_TEST_PRBS", "Ramp", "IPE", "SquareWave"
-  itl:
-    itl_connect: itlb # "Disabled", "ITLA", "ITLB"
-  input:
-    self_trig_width: 64 # [ns]
-    enable: true # true, false
-    dc_offset: 50 # [%]
-    signal_offset: 0 # [uV]
-    trig_threshold: 350 # [ADC counts]
-    pulse_polarity: positive # "Positive", "Negative"
-  event:
-    energy_skim_low_discriminator: 0 # [bin]
-    energy_skim_high_discriminator: 65535 # [bin]
-    event_selector: all # "All", "PileUp", "EnergySkim"
-    wave_selector: all # "All", "PileUp", "EnergySkim"
-    event_neutron_reject: false # true, false
-    wave_neutron_reject: false # true, false
-    coin_mask: disabled # "Disabled", "Ch64Trigger", "TRGIN", "GlobalTriggerSource", "ITLA", "ITLB"
-    anticoin_mask: disabled # "Disabled", "Ch64Trigger", "TRGIN", "GlobalTriggerSource", "ITLA", "ITLB"
-    coin_length: 0 # [ns]
-  dppcommon:
-    timefilter_retrigger_guard: 0 # [ns]
-  dpppsd:
-    smoothing_factor: 1 # 1, 2, 4, 8, 16
-    charge_smoothing: false # true, false
-    timefilter_smoothing: false # true, false
-    trigger_hysteresis: true # true, false
-    cfd_delay: 32 # [ns]
-    cfd_fraction: 25 # 25, 50, 75, 100%
-    trigger_filter: leadingedge # "LeadingEdge", "CFD"
-    adcinput_baseline_avg: mediumhigh # "Fixed", "Low", "MediumLow", "MediumHigh", "High"
-    adcinput_baseline_guard: 0 # [ns]
-    pileup_gap: 1000 # [ADC counts]
-    abs_baseline: 1000 # [ADC counts]
-    gate_offset: 400 # [ns]
-    gate_long_length: 9000 # [ns]
-    gate_short_length: 4000 # [ns]
-    long_charge_integ_ped: 0 # [ADC counts]
-    short_charge_integ_ped: 0 # [ADC counts]
-    energy_gain: 1 # 1, 4, 16, 64, 256
-    neutron_threshold: 0 # [ADC counts]
+ch_default: &ch_default # trigger
+  wave_trigger_source: disabled # "Disabled", "Ch64Trigger", "ChSelfTrigger", "SwTrg", "ADCOverSaturation", "ADCUnderSaturation", "ExternalInhibit", "TRGIN", "GlobalTriggerSource", "LVDS", "ITLA", "ITLB"
+  event_trigger_source: chselftrigger # "Disabled", "Ch64Trigger", "ChSelfTrigger", "SwTrg", "ADCOverSaturation", "ADCUnderSaturation", "ExternalInhibit", "TRGIN", "GlobalTriggerSource", "LVDS", "ITLA", "ITLB"
+  channels_trigger_mask: 0x0FF # 0x0000 ~ 0xffff
+  wave_saving: always # "Always", "OnRequest"
+  veto_source: disabled # "Disabled", "BoardVeto", "ADCOverSaturation", "ADCUnderSaturation"
+  veto_width: 0 # [ns]
+  # waveform
+  record_length: 20000 # [ns]
+  downsampling_factor: 1 # 1, 2, 4, 8
+  analog_probe: [adcinput, cfdfilter] # "ADCInput", "ADCInputBaseline", "CFDFilter"
+  digital_probe:
+    [trigger, longgate, shortgate, chargeready] #"Trigger", "CFDFilterArmed", "ReTriggerGuard", "ADCInputBaselineFreeze",
+    # "ADCinputOverthreshold", "ChargeReady", "LongGate" "PileUpTrigger", "ShortGate",
+    # "ChargeOverRange", "ADCSaturation", "ADCInputNegativeOverThreshold"
+  pre_trigger: 496 # [ns]
+  wave_data_source:
+    adc_data #"ADC_DATA", "ADC_TEST_TOGGLE", "ADC_TEST_RAMP",
+    #"ADC_TEST_SIN", "ADC_TEST_PRBS", "Ramp", "IPE", "SquareWave"
+  # itl:
+  itl_connect: itlb # "Disabled", "ITLA", "ITLB"
+  # input:
+  self_trig_width: 64 # [ns]
+  enable: false # true, false
+  dc_offset: 50 # [%]
+  signal_offset: 0 # [uV]
+  trig_threshold: 350 # [ADC counts]
+  pulse_polarity: positive # "Positive", "Negative"
+  # event:
+  energy_skim_low_discriminator: 0 # [bin]
+  energy_skim_high_discriminator: 65535 # [bin]
+  event_selector: all # "All", "PileUp", "EnergySkim"
+  wave_selector: all # "All", "PileUp", "EnergySkim"
+  event_neutron_reject: false # true, false
+  wave_neutron_reject: false # true, false
+  coin_mask: disabled # "Disabled", "Ch64Trigger", "TRGIN", "GlobalTriggerSource", "ITLA", "ITLB"
+  anticoin_mask: disabled # "Disabled", "Ch64Trigger", "TRGIN", "GlobalTriggerSource", "ITLA", "ITLB"
+  coin_length: 0 # [ns]
+  # dppcommon:
+  timefilter_retrigger_guard: 0 # [ns]
+  # dpppsd:
+  smoothing_factor: 1 # 1, 2, 4, 8, 16
+  charge_smoothing: false # true, false
+  timefilter_smoothing: false # true, false
+  trigger_hysteresis: true # true, false
+  cfd_delay: 32 # [ns]
+  cfd_fraction: 25 # 25, 50, 75, 100%
+  trigger_filter: leadingedge # "LeadingEdge", "CFD"
+  adcinput_baseline_avg: mediumhigh # "Fixed", "Low", "MediumLow", "MediumHigh", "High"
+  adcinput_baseline_guard: 0 # [ns]
+  pileup_gap: 1000 # [ADC counts]
+  abs_baseline: 1000 # [ADC counts]
+  gate_offset: 400 # [ns]
+  gate_long_length: 9000 # [ns]
+  gate_short_length: 4000 # [ns]
+  long_charge_integ_ped: 0 # [ADC counts]
+  short_charge_integ_ped: 0 # [ADC counts]
+  energy_gain: 1 # 1, 4, 16, 64, 256
+  neutron_threshold: 0 # [ADC counts]
 
 global:
   # 기본 설정
   clock_source: internal # 'internal', 'FPClkIn'
   en_clockoutfp: true # true, false
-  trigger:
-    start_source: [swcmd] #EncodedClkIn", "SINlevel", "SINedge", "SWcmd", "LVDS", "P0"
-    global_trigger_source: [swtrg] # "TrgIn", "P0", "SwTrg", "LVDS", "ITLA", "ITLB", "ITLA_AND_ITLB", "ITLA_OR_ITLB", "EncodedClkIn", "GPIO", "TestPulse", "UserTrg"
-    trgout_mode:
-      itlb # "Disabled", "TrgIn", "P0", "SwTrg", "LVDS", "ITLA", "ITLB", "ITLA_AND_ITLB",
-      # "ITLA_OR_ITLB", "EncodedClkIn", "RUN", "RefClk", "TestPulse", "Busy", "UserTrgout",
-      #"Fixed0", "Fixed1", "SyncIn", "SIN", "GPIO", "LBinClk", "AcceptTrg", "TrgClk"
-    gpio_mode:
-      run # "Disabled", "TrgIn", "P0", "SIN", "LVDS", "ITLA", "ITLB",
-      #"ITLA_AND_ITLB", "ITLA_OR_ITLB", "EncodedClkIn", "SWTrg", "Run", "RefClk",
-      #"TestPulse", "Busy", "UserGPO", "Fixed0", "Fixed1"
-    busyin_source: sin # "Disabled", "SIN", "GPIO", "LVDS"
-    syncout_mode: disabled # "Disabled", "SyncIn", "TestPulse", "IntClk", "Run", "User"
-    board_veto_source: disabled # "Disabled", "SIN", "GPIO", "LVDS", "P0", "EncodedClkIn"
-    board_veto_width: 0 # [ns]
-    veto_polarity: activehigh # "ActiveLow", "ActiveHigh"
-    run_delay: 0 # [ns]
-    auto_disarm_acq: true # true, false
-    volatile_clkout_delay: -2592.5925925925926 # [ps]
-    permanent_clkout_delay: -2592.5925925925926 # [ps]
-  testpulse:
-    tp_period: 1000 # [ns]
-    tp_width: 100 # [ns]
-    tp_low_level: 0 # [ADC counts]
-    tp_high_level: 1000 # [ADC counts]
-  service:
-    io_level: nim #  "NIM", "TTL"
-    errorflag_mask: 0x0000 # 0x0000 ~ 0xffff
-    errorflag_data_mask: 0x0000 # 0x0000 ~ 0xffff
-  itla:
-    itla_main_logic: or # "OR", "AND", "Majority"
-    itla_majority_level: 1
-    itla_pair_logic: none # "OR", "AND", "None"
-    itla_polarity: direct # "Inverted", "Direct"
-    itla_mask: 0x0000 # 0x0000 ~ 0xffff
-    itla_gate_width: 16 # [ns]
-  itlb:
-    itlb_main_logic: or # "OR", "AND", "Majority"
-    itlb_majority_level: 1
-    itlb_pair_logic: none # "OR", "AND", "None"
-    itlb_polarity: direct # "Inverted", "Direct"
-    itlb_mask: 0x0000 # 0x0000 ~ 0xffff
-    itlb_gate_width: 16 # [ns]
-  lvds:
-    lvds_mode: [selftriggers, selftriggers, selftriggers, selftriggers] # "SelfTriggers", "Sync", "IORegister", "User"
-    lvds_direction: [output, output, output, output] # "Input", "Output"
-    #lvds_trg_mask: 0xFFFF # 0x0000 ~ 0xffff
-  dacout:
-    dacout_mode:
-      static # "Static", "Ramp", "Sin5MHz", "Square", "IPE", "ChInput",
-      #"MemOccupancy", "ChSum", "OverThrSum"
-    dacout_static_level: 8192 # [ADC counts]
-    dacout_ch_select: 0 # [0 ~ 63]
-  input:
-    input_delay: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] # group of 4 channels [Sample]
-    offset_calibration: true # true, false
-  dpp:
-    data_reduction: false # true, false
-    stat_events: false # true, false
+  # trigger:
+  start_source: [swcmd] #EncodedClkIn", "SINlevel", "SINedge", "SWcmd", "LVDS", "P0"
+  global_trigger_source: [swtrg] # "TrgIn", "P0", "SwTrg", "LVDS", "ITLA", "ITLB", "ITLA_AND_ITLB", "ITLA_OR_ITLB", "EncodedClkIn", "GPIO", "TestPulse", "UserTrg"
+  trgout_mode:
+    itlb # "Disabled", "TrgIn", "P0", "SwTrg", "LVDS", "ITLA", "ITLB", "ITLA_AND_ITLB",
+    # "ITLA_OR_ITLB", "EncodedClkIn", "RUN", "RefClk", "TestPulse", "Busy", "UserTrgout",
+    #"Fixed0", "Fixed1", "SyncIn", "SIN", "GPIO", "LBinClk", "AcceptTrg", "TrgClk"
+  gpio_mode:
+    run # "Disabled", "TrgIn", "P0", "SIN", "LVDS", "ITLA", "ITLB",
+    #"ITLA_AND_ITLB", "ITLA_OR_ITLB", "EncodedClkIn", "SWTrg", "Run", "RefClk",
+    #"TestPulse", "Busy", "UserGPO", "Fixed0", "Fixed1"
+  busyin_source: sin # "Disabled", "SIN", "GPIO", "LVDS"
+  syncout_mode: disabled # "Disabled", "SyncIn", "TestPulse", "IntClk", "Run", "User"
+  board_veto_source: disabled # "Disabled", "SIN", "GPIO", "LVDS", "P0", "EncodedClkIn"
+  board_veto_width: 0 # [ns]
+  veto_polarity: activehigh # "ActiveLow", "ActiveHigh"
+  run_delay: 0 # [ns]
+  auto_disarm_acq: true # true, false
+  volatile_clkout_delay: -2592.5925925925926 # [ps]
+  permanent_clkout_delay: -2592.5925925925926 # [ps]
+  # testpulse:
+  tp_period: 1000 # [ns]
+  tp_width: 100 # [ns]
+  tp_low_level: 0 # [ADC counts]
+  tp_high_level: 1000 # [ADC counts]
+  # service:
+  io_level: nim #  "NIM", "TTL"
+  errorflag_mask: 0x0000 # 0x0000 ~ 0xffff
+  errorflag_data_mask: 0x0000 # 0x0000 ~ 0xffff
+  # itla:
+  itla_main_logic: or # "OR", "AND", "Majority"
+  itla_majority_level: 1
+  itla_pair_logic: none # "OR", "AND", "None"
+  itla_polarity: direct # "Inverted", "Direct"
+  itla_mask: 0x0000 # 0x0000 ~ 0xffff
+  itla_gate_width: 16 # [ns]
+  # itlb:
+  itlb_main_logic: or # "OR", "AND", "Majority"
+  itlb_majority_level: 1
+  itlb_pair_logic: none # "OR", "AND", "None"
+  itlb_polarity: direct # "Inverted", "Direct"
+  itlb_mask: 0x0000 # 0x0000 ~ 0xffff
+  itlb_gate_width: 16 # [ns]
+  # lvds:
+  lvds_mode: [selftriggers, selftriggers, selftriggers, selftriggers] # "SelfTriggers", "Sync", "IORegister", "User"
+  lvds_direction: [output, output, output, output] # "Input", "Output"
+  #lvds_trg_mask: 0xFFFF # 0x0000 ~ 0xffff
+  # dacout:
+  dacout_mode:
+    static # "Static", "Ramp", "Sin5MHz", "Square", "IPE", "ChInput",
+    #"MemOccupancy", "ChSum", "OverThrSum"
+  dacout_static_level: 8192 # [ADC counts]
+  dacout_ch_select: 0 # [0 ~ 63]
+  # input:
+  input_delay: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] # group of 4 channels [Sample]
+  offset_calibration: true # true, false
+  # dpp:
+  data_reduction: false # true, false
+  stat_events: false # true, false
 
 channel:
   - number: 0
@@ -129,18 +128,25 @@ channel:
     enable: true
   - number: 1
     <<: *ch_default
+    enable: true
   - number: 2
     <<: *ch_default
+    enable: true
   - number: 3
     <<: *ch_default
+    enable: true
   - number: 4
     <<: *ch_default
+    enable: true
   - number: 5
     <<: *ch_default
+    enable: true
   - number: 6
     <<: *ch_default
+    enable: true
   - number: 7
     <<: *ch_default
+    enable: true
   - number: 8
     <<: *ch_default
   - number: 9
